fix responsivity on tablet

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,44 +23,35 @@
         display: flex;
         align-items: center;
         gap: 0.5rem;
-        margin: 1.5rem;
+        margin: 0.5rem;
     }
 
     .play-btn {
 
-        width: 100px;
-        height: 100px;
+        width: 50px;
+        height: 45px;
         border-radius: 100%;
-        font-size: 2rem;
+        font-size: 1rem;
     }
-
-    .go {
-        display: block;
-        width: 100%;
-        margin-bottom: 0.3rem;
-        padding: 0.4rem 3rem;
-        border-radius: 5px;
-        background-color: white;
-        color: black;
-    }
-
-    .wish {
-        display: block;
-        width: 100%;
-        margin-bottom: 0.3rem;
-        padding: 0.4rem 3rem;
-        border-radius: 5px;
-        background-color: black;
-        color: white;
-        border-color: white;
-    }
-
-    h6 {
-        margin-bottom: 0.5rem;
-    }
-
 
 }
+
+.current-play {
+    display: block;
+   
+    
+}
+
+.follow {    
+    width: 100%;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    border-color: white;
+    margin-top: 0.3rem;
+
+}
+
 }
 
 
